Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-5108

SSL requests might stall because enabled write is ignored

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 7.1.0
    • SSL
    • None

    Description

      In non-debug mode an enabled write is ignored resulting in a stalled request. In debug mode the writeReschedule is fired.

      A fix is to move the conditional writeReschedule out of the conditional debug code.

      Addendum to:
      https://issues.apache.org/jira/browse/TS-2815
      https://github.com/apache/trafficserver/commit/f3a3edb048fc5f96163d1c4a26c1523383786f5d

      For more context:
      https://github.com/apache/trafficserver/blob/6.2.0/iocore/net/SSLNetVConnection.cc#L1279

      Attachments

        Issue Links

          Activity

            People

              oschaaf Otto van der Schaaf
              kspoelstra Kees Spoelstra
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 10m
                  1h 10m