Fix for: TS-5108-SSL requests might stall because enabled write is ignored

In non-debug mode an enabled write is ignored resulting in a stalled request. In debug mode the writeReschedule is fired.

A fix is to move the conditional writeReschedule out of the conditional debug code.
Addendum to:
https://issues.apache.org/jira/browse/TS-2815
https://github.com/apache/trafficserver/commit/f3a3edb048fc5f96163d1c4a26c1523383786f5d
For more context:
https://github.com/apache/trafficserver/blob/6.2.0/iocore/net/SSLNetVConnection.cc#L1279